{
    "name": "GamePlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "737ed8c5-27bc-4b23-9d9d-479fd9150f1c",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "eaf298f6-4d38-4301-9269-7fbc6337094d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "2f8afa99-4fad-4989-8977-fc77ee540d89",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d348b070-9ce4-4c20-99bc-4cb5c79aff30",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8561ecd6-e4a0-48d1-b3f6-b8085a5979e6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}